<resources>
    <string name="app_name">PROG7313_POE</string>
    <string name="expenses">Expenses</string>
    <string name="budget">Budget</string>
    <string name="home">Home</string>
    <string name="advices">Advices</string>
    <string name="more">More</string>
    <string name="profile" />
    <string name="current_month" />
    <string name="march_2023" />
    <string name="monthly_budget" />
    <string name="sample_budget" />
    <string name="spent_so_far" />
    <string name="sample_spent" />
    <string name="remaining" />
    <string name="sample_remaining" />
    <string name="set_budget" />
    <string name="recent_expenses" />
    <string name="view_all" />
    <string name="expense_categories" />
    <string name="manage" />
    <string name="add_expense" />
    <string name="todo">TODO</string>
    <string name="get_started">Get Started</string>
    <string name="take_control_of_your_nfinances_with_budget_ngenius">Take Control of Your\nFinances with Budget\nGenius</string>
    <string name="take_control_of_your_finances_with_budget_genius" />
    <string name="filter" />
    <string name="this_month" />
    <string name="last_month" />
    <string name="last_3_months" />
    <string name="custom" />
    <string name="apply" />
    <string name="end_date" />
    <string name="start_date" />
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="add_category">Add Category</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="description">Description</string>
    <string name="expense_date">Expense Date</string>
    <string name="amount">Amount</string>
    <string name="create_expense">Create Expense</string>
    <string name="view_ex">View Ex...</string>
    <string name="welcome" />
    <string name="username_or_email" />
    <string name="password" />
    <string name="forgot_password" />
    <string name="login" />
    <string name="sign_up" />
</resources>